--- a/inclass-2/Pizza.html
+++ b/inclass-2/Pizza.html
@@ -38,7 +38,7 @@
         </p>
         <p>
             <!--phone number-->
-            <h3>Phone Number: 123-123-1234 </h3>
+            <h3>Phone Number: 123-123-1234, should not start with 0</h3>
             <!--when mouse set this area focused, when blank will be empty, otherwise it will be filled with"123-123-1234"-->
             <input type="tel" id="phone" placeholder="123-123-1234" value="">
         </p>
