--- a/inclass-2/Pizza.html
+++ b/inclass-2/Pizza.html
@@ -38,7 +38,7 @@
         </p>
         <p>
             <!--phone number-->
-            <h3>Phone Number: 123-123-1234, should not start with 0</h3>
+            <h3>Phone Number: 123-123-1234</h3>
             <!--when mouse set this area focused, when blank will be empty, otherwise it will be filled with"123-123-1234"-->
             <input type="tel" id="phone" placeholder="123-123-1234" value="">
         </p>
@@ -78,7 +78,7 @@
         }
         console.log(form)
         //set the regular expression for phone number
-        var Reg = new RegExp("[1-9][0-9]{2}[-][0-9]{3}[-][0-9]{4}");
+        var Reg = new RegExp("[0-9]{3}[-][0-9]{3}[-][0-9]{4}");
         //username required
         if(document.getElementById('username').value==""){
             window.alert("Please input your name!");
@@ -96,7 +96,7 @@
         }
         //use regular expression to validate the phone number
         if(!(Reg.test(document.getElementById('phone').value))){
-            window.alert("Your phone number does not match the requested format 123-123-1234. Your phone number should not start with 0. Please enter a valid phone number.");
+            window.alert("Your phone number does not match the requested format 123-123-1234. Please enter a valid phone number.");
             return false;
         }
         //size of pizza has been selected
