inclass-4-fix bug

--- a/inclass-4/main.html
+++ b/inclass-4/main.html
@@ -45,6 +45,7 @@ window.onload = function() {
 
 	function logout() {
 		// reverse hiding done in login
+		showname.innerHTML="Username";
 		username.type="text";
 		username.value="";
 		post.style.display="none";
